--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.csc.lesson6">
+    package="com.csc.malinovsky239">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.csc.malinovsky239.todoList.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +19,8 @@
         </activity>
 
         <provider
-            android:name=".ReaderContentProvider"
-            android:authorities="com.csc.lesson6"
+            android:name="com.csc.malinovsky239.todoList.ReaderContentProvider"
+            android:authorities="com.csc.malinovsky239.todoList.ReaderContentProvider"
             android:enabled="true"
             android:exported="true"></provider>
     </application>
